// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/ should render Home with 50 Launch Records 1`] = `
<div
  aria-colcount="5"
  aria-multiselectable="false"
  aria-rowcount="50"
  class="MuiDataGrid-root MuiDataGrid-root"
  role="grid"
>
  <div>
    <div />
  </div>
  <div
    class="MuiDataGrid-main"
  >
    <div
      class="MuiDataGrid-columnsContainer"
      style="min-height: 56px; max-height: 56px; line-height: 56px;"
    >
      <div
        aria-rowindex="1"
        class="MuiDataGrid-columnHeaderWrapper scroll"
        role="row"
        style="transform: translate3d(-0px, 0, 0); min-width: 1250px;"
      >
        <div
          aria-colindex="1"
          class="MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader"
          data-field="id"
          role="columnheader"
          style="width: 250px; min-width: 250px; max-width: 250px;"
          tabindex="0"
        >
          <div
            class="MuiDataGrid-columnHeaderDraggableContainer"
            draggable="false"
          >
            <div
              class="MuiDataGrid-columnHeaderTitleContainer"
            >
              <div
                class="MuiDataGrid-columnHeaderTitle"
                title=""
              >
                Flight Number
              </div>
              <div
                class="MuiDataGrid-iconButtonContainer"
              >
                <button
                  aria-label="Sort"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="-1"
                  title="Sort"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiDataGrid-sortIcon MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-menuIcon"
            >
              <button
                aria-controls="mui-86473"
                aria-haspopup="true"
                aria-label="Menu"
                class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                id="mui-15826"
                tabindex="-1"
                title="Menu"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiDataGrid-columnSeparator"
            style="min-height: 56px; opacity: 1;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 19V5h2v14z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-colindex="2"
          class="MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader"
          data-field="mission_name"
          role="columnheader"
          style="width: 250px; min-width: 250px; max-width: 250px;"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-columnHeaderDraggableContainer"
            draggable="false"
          >
            <div
              class="MuiDataGrid-columnHeaderTitleContainer"
            >
              <div
                class="MuiDataGrid-columnHeaderTitle"
                title=""
              >
                Mission Name
              </div>
              <div
                class="MuiDataGrid-iconButtonContainer"
              >
                <button
                  aria-label="Sort"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="-1"
                  title="Sort"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiDataGrid-sortIcon MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-menuIcon"
            >
              <button
                aria-controls="mui-96951"
                aria-haspopup="true"
                aria-label="Menu"
                class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                id="mui-89985"
                tabindex="-1"
                title="Menu"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiDataGrid-columnSeparator"
            style="min-height: 56px; opacity: 1;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 19V5h2v14z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-colindex="3"
          class="MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader"
          data-field="launch_date_utc"
          role="columnheader"
          style="width: 250px; min-width: 250px; max-width: 250px;"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-columnHeaderDraggableContainer"
            draggable="false"
          >
            <div
              class="MuiDataGrid-columnHeaderTitleContainer"
            >
              <div
                class="MuiDataGrid-columnHeaderTitle"
                title=""
              >
                Launch Date
              </div>
              <div
                class="MuiDataGrid-iconButtonContainer"
              >
                <button
                  aria-label="Sort"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="-1"
                  title="Sort"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiDataGrid-sortIcon MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-menuIcon"
            >
              <button
                aria-controls="mui-10515"
                aria-haspopup="true"
                aria-label="Menu"
                class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                id="mui-82825"
                tabindex="-1"
                title="Menu"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiDataGrid-columnSeparator"
            style="min-height: 56px; opacity: 1;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 19V5h2v14z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiDataGrid-cell"
          style="min-width: 500px; max-width: 500px; line-height: 55px; min-height: 56px; max-height: 56px;"
        />
      </div>
    </div>
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        class="MuiDataGrid-windowContainer"
        style="width: 0px; height: 0px;"
      >
        <div
          class="MuiDataGrid-window"
          style="top: 56px; overflow-y: auto;"
        >
          <div
            class="MuiDataGrid-dataContainer"
            style="min-width: 1250px; min-height: 0;"
          >
            <div
              class="MuiDataGrid-viewport"
              style="min-width: 0; max-width: 0; max-height: 0;"
            >
              <div
                class="MuiDataGrid-renderingZone"
                style="max-height: 0; width: 1250px; transform: translate3d(-0px, -NaNpx, 0);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Mui-resizeTriggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
  <div>
    <div
      class="MuiDataGrid-footerContainer"
    >
      <div />
      <div
        class="MuiTablePagination-root"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar MuiToolbar-gutters"
        >
          <div
            class="MuiTablePagination-spacer"
          />
          <p
            class="MuiTypography-root MuiTablePagination-caption makeStyles-caption-2 MuiTypography-body2 MuiTypography-colorInherit"
          >
            1-50 of 50
          </p>
          <div
            class="MuiTablePagination-actions"
          >
            <button
              aria-label="Previous page"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              title="Previous page"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </svg>
              </span>
            </button>
            <button
              aria-label="Next page"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              title="Next page"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`/ should render Home with 50 Launch Records with Mission Name Empty 1`] = `
<div
  aria-colcount="5"
  aria-multiselectable="false"
  aria-rowcount="50"
  class="MuiDataGrid-root MuiDataGrid-root"
  role="grid"
>
  <div>
    <div />
  </div>
  <div
    class="MuiDataGrid-main"
  >
    <div
      class="MuiDataGrid-columnsContainer"
      style="min-height: 56px; max-height: 56px; line-height: 56px;"
    >
      <div
        aria-rowindex="1"
        class="MuiDataGrid-columnHeaderWrapper scroll"
        role="row"
        style="transform: translate3d(-0px, 0, 0); min-width: 1250px;"
      >
        <div
          aria-colindex="1"
          class="MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader"
          data-field="id"
          role="columnheader"
          style="width: 250px; min-width: 250px; max-width: 250px;"
          tabindex="0"
        >
          <div
            class="MuiDataGrid-columnHeaderDraggableContainer"
            draggable="false"
          >
            <div
              class="MuiDataGrid-columnHeaderTitleContainer"
            >
              <div
                class="MuiDataGrid-columnHeaderTitle"
                title=""
              >
                Flight Number
              </div>
              <div
                class="MuiDataGrid-iconButtonContainer"
              >
                <button
                  aria-label="Sort"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="-1"
                  title="Sort"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiDataGrid-sortIcon MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-menuIcon"
            >
              <button
                aria-controls="mui-11761"
                aria-haspopup="true"
                aria-label="Menu"
                class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                id="mui-90147"
                tabindex="-1"
                title="Menu"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiDataGrid-columnSeparator"
            style="min-height: 56px; opacity: 1;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 19V5h2v14z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-colindex="2"
          class="MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader"
          data-field="mission_name"
          role="columnheader"
          style="width: 250px; min-width: 250px; max-width: 250px;"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-columnHeaderDraggableContainer"
            draggable="false"
          >
            <div
              class="MuiDataGrid-columnHeaderTitleContainer"
            >
              <div
                class="MuiDataGrid-columnHeaderTitle"
                title=""
              >
                Mission Name
              </div>
              <div
                class="MuiDataGrid-iconButtonContainer"
              >
                <button
                  aria-label="Sort"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="-1"
                  title="Sort"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiDataGrid-sortIcon MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-menuIcon"
            >
              <button
                aria-controls="mui-39806"
                aria-haspopup="true"
                aria-label="Menu"
                class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                id="mui-22496"
                tabindex="-1"
                title="Menu"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiDataGrid-columnSeparator"
            style="min-height: 56px; opacity: 1;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 19V5h2v14z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-colindex="3"
          class="MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader"
          data-field="launch_date_utc"
          role="columnheader"
          style="width: 250px; min-width: 250px; max-width: 250px;"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-columnHeaderDraggableContainer"
            draggable="false"
          >
            <div
              class="MuiDataGrid-columnHeaderTitleContainer"
            >
              <div
                class="MuiDataGrid-columnHeaderTitle"
                title=""
              >
                Launch Date
              </div>
              <div
                class="MuiDataGrid-iconButtonContainer"
              >
                <button
                  aria-label="Sort"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="-1"
                  title="Sort"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiDataGrid-sortIcon MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-menuIcon"
            >
              <button
                aria-controls="mui-53611"
                aria-haspopup="true"
                aria-label="Menu"
                class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                id="mui-79003"
                tabindex="-1"
                title="Menu"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiDataGrid-columnSeparator"
            style="min-height: 56px; opacity: 1;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 19V5h2v14z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiDataGrid-cell"
          style="min-width: 500px; max-width: 500px; line-height: 55px; min-height: 56px; max-height: 56px;"
        />
      </div>
    </div>
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        class="MuiDataGrid-windowContainer"
        style="width: 0px; height: 0px;"
      >
        <div
          class="MuiDataGrid-window"
          style="top: 56px; overflow-y: auto;"
        >
          <div
            class="MuiDataGrid-dataContainer"
            style="min-width: 1250px; min-height: 0;"
          >
            <div
              class="MuiDataGrid-viewport"
              style="min-width: 0; max-width: 0; max-height: 0;"
            >
              <div
                class="MuiDataGrid-renderingZone"
                style="max-height: 0; width: 1250px; transform: translate3d(-0px, -NaNpx, 0);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Mui-resizeTriggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
  <div>
    <div
      class="MuiDataGrid-footerContainer"
    >
      <div />
      <div
        class="MuiTablePagination-root"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar MuiToolbar-gutters"
        >
          <div
            class="MuiTablePagination-spacer"
          />
          <p
            class="MuiTypography-root MuiTablePagination-caption makeStyles-caption-8 MuiTypography-body2 MuiTypography-colorInherit"
          >
            1-50 of 50
          </p>
          <div
            class="MuiTablePagination-actions"
          >
            <button
              aria-label="Previous page"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              title="Previous page"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </svg>
              </span>
            </button>
            <button
              aria-label="Next page"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              title="Next page"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`/ should render Home with two Launch Records with Mission Name Crew 1`] = `
<div
  aria-colcount="5"
  aria-multiselectable="false"
  aria-rowcount="2"
  class="MuiDataGrid-root MuiDataGrid-root"
  role="grid"
>
  <div>
    <div />
  </div>
  <div
    class="MuiDataGrid-main"
  >
    <div
      class="MuiDataGrid-columnsContainer"
      style="min-height: 56px; max-height: 56px; line-height: 56px;"
    >
      <div
        aria-rowindex="1"
        class="MuiDataGrid-columnHeaderWrapper scroll"
        role="row"
        style="transform: translate3d(-0px, 0, 0); min-width: 1250px;"
      >
        <div
          aria-colindex="1"
          class="MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader"
          data-field="id"
          role="columnheader"
          style="width: 250px; min-width: 250px; max-width: 250px;"
          tabindex="0"
        >
          <div
            class="MuiDataGrid-columnHeaderDraggableContainer"
            draggable="false"
          >
            <div
              class="MuiDataGrid-columnHeaderTitleContainer"
            >
              <div
                class="MuiDataGrid-columnHeaderTitle"
                title=""
              >
                Flight Number
              </div>
              <div
                class="MuiDataGrid-iconButtonContainer"
              >
                <button
                  aria-label="Sort"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="-1"
                  title="Sort"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiDataGrid-sortIcon MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-menuIcon"
            >
              <button
                aria-controls="mui-81926"
                aria-haspopup="true"
                aria-label="Menu"
                class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                id="mui-19124"
                tabindex="-1"
                title="Menu"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiDataGrid-columnSeparator"
            style="min-height: 56px; opacity: 1;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 19V5h2v14z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-colindex="2"
          class="MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader"
          data-field="mission_name"
          role="columnheader"
          style="width: 250px; min-width: 250px; max-width: 250px;"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-columnHeaderDraggableContainer"
            draggable="false"
          >
            <div
              class="MuiDataGrid-columnHeaderTitleContainer"
            >
              <div
                class="MuiDataGrid-columnHeaderTitle"
                title=""
              >
                Mission Name
              </div>
              <div
                class="MuiDataGrid-iconButtonContainer"
              >
                <button
                  aria-label="Sort"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="-1"
                  title="Sort"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiDataGrid-sortIcon MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-menuIcon"
            >
              <button
                aria-controls="mui-72655"
                aria-haspopup="true"
                aria-label="Menu"
                class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                id="mui-6975"
                tabindex="-1"
                title="Menu"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiDataGrid-columnSeparator"
            style="min-height: 56px; opacity: 1;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 19V5h2v14z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-colindex="3"
          class="MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader"
          data-field="launch_date_utc"
          role="columnheader"
          style="width: 250px; min-width: 250px; max-width: 250px;"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-columnHeaderDraggableContainer"
            draggable="false"
          >
            <div
              class="MuiDataGrid-columnHeaderTitleContainer"
            >
              <div
                class="MuiDataGrid-columnHeaderTitle"
                title=""
              >
                Launch Date
              </div>
              <div
                class="MuiDataGrid-iconButtonContainer"
              >
                <button
                  aria-label="Sort"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="-1"
                  title="Sort"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiDataGrid-sortIcon MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-menuIcon"
            >
              <button
                aria-controls="mui-82521"
                aria-haspopup="true"
                aria-label="Menu"
                class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                id="mui-61659"
                tabindex="-1"
                title="Menu"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiDataGrid-columnSeparator"
            style="min-height: 56px; opacity: 1;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 19V5h2v14z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiDataGrid-cell"
          style="min-width: 500px; max-width: 500px; line-height: 55px; min-height: 56px; max-height: 56px;"
        />
      </div>
    </div>
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        class="MuiDataGrid-windowContainer"
        style="width: 0px; height: 0px;"
      >
        <div
          class="MuiDataGrid-window"
          style="top: 56px; overflow-y: auto;"
        >
          <div
            class="MuiDataGrid-dataContainer"
            style="min-width: 1250px; min-height: 104px;"
          >
            <div
              class="MuiDataGrid-viewport"
              style="min-width: 0; max-width: 0; max-height: 0;"
            >
              <div
                class="MuiDataGrid-renderingZone"
                style="max-height: 104px; width: 1250px; transform: translate3d(-0px, -0px, 0);"
              >
                <div
                  aria-rowindex="2"
                  aria-selected="false"
                  class="MuiDataGrid-row"
                  data-id="107"
                  data-rowindex="0"
                  role="row"
                  style="max-height: 52px; min-height: 52px;"
                >
                  <div
                    aria-colindex="1"
                    class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                    data-colindex="0"
                    data-editable="false"
                    data-field="id"
                    data-mode="view"
                    data-rowindex="0"
                    data-rowselected="false"
                    data-value="107"
                    role="cell"
                    style="min-width: 250px; max-width: 250px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    tabindex="-1"
                  >
                    107
                  </div>
                  <div
                    aria-colindex="2"
                    class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                    data-colindex="1"
                    data-editable="false"
                    data-field="mission_name"
                    data-mode="view"
                    data-rowindex="0"
                    data-rowselected="false"
                    data-value="Crew-1"
                    role="cell"
                    style="min-width: 250px; max-width: 250px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    tabindex="-1"
                  >
                    Crew-1
                  </div>
                  <div
                    aria-colindex="3"
                    class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                    data-colindex="2"
                    data-editable="false"
                    data-field="launch_date_utc"
                    data-mode="view"
                    data-rowindex="0"
                    data-rowselected="false"
                    data-value="2020-11-16T00:27:00.000Z"
                    role="cell"
                    style="min-width: 250px; max-width: 250px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    tabindex="-1"
                  >
                    2020-11-16T00:27:00.000Z
                  </div>
                  <div
                    class="MuiDataGrid-cell"
                    style="min-width: 500px; max-width: 500px; line-height: 51px; min-height: 52px; max-height: 52px;"
                  />
                </div>
                <div
                  aria-rowindex="3"
                  aria-selected="false"
                  class="MuiDataGrid-row"
                  data-id="88"
                  data-rowindex="1"
                  role="row"
                  style="max-height: 52px; min-height: 52px;"
                >
                  <div
                    aria-colindex="1"
                    class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                    data-colindex="0"
                    data-editable="false"
                    data-field="id"
                    data-mode="view"
                    data-rowindex="1"
                    data-rowselected="false"
                    data-value="88"
                    role="cell"
                    style="min-width: 250px; max-width: 250px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    tabindex="-1"
                  >
                    88
                  </div>
                  <div
                    aria-colindex="2"
                    class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                    data-colindex="1"
                    data-editable="false"
                    data-field="mission_name"
                    data-mode="view"
                    data-rowindex="1"
                    data-rowselected="false"
                    data-value="Crew Dragon In Flight Abort Test"
                    role="cell"
                    style="min-width: 250px; max-width: 250px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    tabindex="-1"
                  >
                    Crew Dragon In Flight Abort Test
                  </div>
                  <div
                    aria-colindex="3"
                    class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                    data-colindex="2"
                    data-editable="false"
                    data-field="launch_date_utc"
                    data-mode="view"
                    data-rowindex="1"
                    data-rowselected="false"
                    data-value="2020-01-19T14:00:00.000Z"
                    role="cell"
                    style="min-width: 250px; max-width: 250px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    tabindex="-1"
                  >
                    2020-01-19T14:00:00.000Z
                  </div>
                  <div
                    class="MuiDataGrid-cell"
                    style="min-width: 500px; max-width: 500px; line-height: 51px; min-height: 52px; max-height: 52px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Mui-resizeTriggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
  <div>
    <div
      class="MuiDataGrid-footerContainer"
    >
      <div />
      <div
        class="MuiTablePagination-root"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar MuiToolbar-gutters"
        >
          <div
            class="MuiTablePagination-spacer"
          />
          <p
            class="MuiTypography-root MuiTablePagination-caption makeStyles-caption-5 MuiTypography-body2 MuiTypography-colorInherit"
          >
            1-2 of 2
          </p>
          <div
            class="MuiTablePagination-actions"
          >
            <button
              aria-label="Previous page"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              title="Previous page"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </svg>
              </span>
            </button>
            <button
              aria-label="Next page"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              title="Next page"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
